lab02/log/build_2024-10-25_16-39-24/lab02_pkg/stderr.log
  File "/home/lincunha/SESASR/lab02/install/lab02_pkg/lib/python3.10/site-packages/lab02_pkg/controller.py", line 129
    if msg.ranges[0] < 1
                        ^
SyntaxError: expected ':'

